--- a/rzp.env
+++ b/rzp.env
@@ -1,8 +1,8 @@
-API_ID=123456
-API_HASH=xxxxxxxxxxxxxxxxxxxxxxxxxxxx
-BOT_TOKEN=123456:abcdefg
-RAZORPAY_KEY_ID=rzp_test_xxxxx
-RAZORPAY_KEY_SECRET=xxxxxxxx
-RAZORPAY_WEBHOOK_SECRET=xxxxxx
-OWNER_ID=123456789
-WEBHOOK_PUBLIC_URL=https://your-tunnel-or-domain/webhook
+API_ID=29170645
+API_HASH=0498ddbf04f71f7d91018c27140b82b3
+BOT_TOKEN=8546952430:AAHekHYQeqgv9bR26G3pM8Voa5oCWpprJp0
+RAZORPAY_KEY_ID=rzp_test_Rqbs2JLPtHuO3d
+RAZORPAY_KEY_SECRET=1t3GqQn5XnthDypaiACRYgs5
+RAZORPAY_WEBHOOK_SECRET=Stree
+OWNER_ID=8117105652
+WEBHOOK_PUBLIC_URL=https://rip-agree-prisoner-legend.trycloudflare.com/webhook
